--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.2.2",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^1.1.3"
   }
